# prototype-app

./: .env.example  .gitignore  ENV_SETUP.md  Makefile  README.md  architect.md  docker-compose.yml  package-lock.json  prototype-app.code-workspace  pyproject.toml  test.py
backend/: samconfig.toml  template.yaml
backend/app/: config.py  main.py
backend/app/api/: groups.py  logs.py  root.py  users.py
backend/app/models/: common.py  logs.py  users.py
backend/app/repositories/: dynamodb.py  group_repo.py  groups.py  log_repo.py  logs.py  user_repo.py  users.py
backend/app/schemas/: groups.py  logs.py  users.py
backend/app/services/: group_service.py  log_service.py  user_service.py
backend/app/utils/: access_log.py
backend/tests/: README.md  conftest.py
backend/tests/fixtures/: dynamodb.py
backend/tests/integration/: conftest.py
backend/tests/unit/: conftest.py
backend/tools/: get_logs.py  get_users.py
frontend/: .env  .env.local  .env.sample  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: preview.tsx
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts
frontend/src/components/: App.test.tsx  Items.tsx  Logs.tsx  Users.tsx
frontend/src/layouts/: Layout.tsx  RequireAuthLayout.tsx
frontend/src/pages/: confirm-session.tsx  login.tsx  logout.tsx  page.tsx
frontend/src/routes/: __root.tsx  _auth.tsx  confirm-session.tsx  login.tsx  logout.tsx
infrastructure/: generate_test_data.py
infrastructure/aws/: DEPLOY.md
infrastructure/aws/backend/: .gitignore  README.md  samconfig.toml  show-outputs.sh  template.yaml
infrastructure/aws/cognito/: README.md  register_test_user.py  template.yaml
infrastructure/aws/dynamodb/: README.md  fast_loader_aws.py  template.yaml
infrastructure/aws/lambda-layer/: .gitignore  README.md  build.sh  samconfig.toml  show-outputs.sh  template.yaml
infrastructure/aws/s3/: README.md  template.yaml
infrastructure/localstack/: export_sample_jsonl.py  export_tables.py  fast_loader.py  init-aws.sh
memo/: 1_fastapi_lambda_structure_guide.md  git.md  localstack.md  memo.md
scripts/: README.md  check_stack.sh  show-env.py  sync-env.py
(+53 files in other folders)
